@@ -1,8 +1,18 @@
+2003-02-17  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* pylibs/SocketMan/SocketMan.py (SocketMan.addConnection): code
+	to delete unix socket files if they are hanging around where we
+	expect to create them; other files don't get deleted.
+
+	* SkunkWeb/Services/httpd/protocol.py
+	(HTTPMethodRequestParser._getEnv):  permit httpd service to be run
+	on a UNIX socket, as requested by Remi Dilon. 
+
 2003-02-11  Jacob Smullyan  <smulloni@smullyan.org>
 
 	* pylibs/argextract.py (extract_args): fix for default values.
 
-2003-02-11    <smulloni@smullbola.smullyan.org>
+2003-02-11 Jacob Smullyan <smulloni@smullyan.org>
 
 	* pylibs/vfs/importer.py (VFSOwner.getmod): Package imports were
 	broken, but now they seem to work.
